--- a/html/06_object.html
+++ b/html/06_object.html
@@ -316,11 +316,11 @@ console.log(Object.hasOwn({<span class="tok-definition">x</span>: <span class="t
 
 <p><a class="p_ident" id="p-Ak3g9CFweG" href="#p-Ak3g9CFweG" tabindex="-1" role="presentation"></a>Cuando llamas a la función <code>String</code> (que convierte un valor a una cadena) en un objeto, llamará al método <code>toString</code> en ese objeto para intentar crear una cadena significativa a partir de él. Mencioné que algunos de los prototipos estándar definen su propia versión de <code>toString</code> para poder crear una cadena que contenga información más útil que <code>&quot;[object Object]&quot;</code>. También puedes hacerlo tú mismo.</p>
 
-<pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-VFopw5ZAnI" href="#c-VFopw5ZAnI" tabindex="-1" role="presentation"></a>Rabbit.prototype.toString = <span class="tok-keyword">function</span>() {
+<pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-z6Pvu4wS7m" href="#c-z6Pvu4wS7m" tabindex="-1" role="presentation"></a>Rabbit.prototype.toString = <span class="tok-keyword">function</span>() {
   <span class="tok-keyword">return</span> <span class="tok-string2">`un conejo </span>${<span class="tok-keyword">this</span>.type}<span class="tok-string2">`</span>;
 };
 
-console.log(String(conejoAsesino));
+console.log(String(killerRabbit));
 <span class="tok-comment">// → un conejo asesino</span></pre>
 
 <p><a class="p_ident" id="p-jc1Gz6pFUo" href="#p-jc1Gz6pFUo" tabindex="-1" role="presentation"></a>Este es un ejemplo simple de una idea poderosa. Cuando se escribe un código para trabajar con objetos que tienen una determinada interfaz, en este caso, un método <code>toString</code>, cualquier tipo de objeto que accidentalmente admita esta interfaz puede ser enchufado en el código, y este podrá funcionar con él.</p>
