--- a/html/17_canvas.html
+++ b/html/17_canvas.html
@@ -4,15 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dibujando en Canvas :: Eloquent JavaScript</title>
   <link rel=stylesheet href="css/ejs.css"><script>
-      var page = {"type":"chapter","number":17}</script></head>
+      var page = {"type":"chapter","number":17,"load_files":["code/chapter/16_game.js","code/levels.js","code/stop_keys.js","code/chapter/17_canvas.js"]}</script></head>
 
 <article>
 <nav><a href="16_game.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="18_http.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Dibujando en Canvas</h1>
-
-<p><a class="p_ident" id="p-+FoMLxXatY" href="#p-+FoMLxXatY" tabindex="-1" role="presentation"></a>{{meta {load_files: [“code/chapter/16_game.js”, “code/levels.js”, “code/stop_keys.js”, “code/chapter/17_canvas.js”], zip: “html include=[“img/player.png”, “img/sprites.png”]&quot;}}}</p>
 
 <blockquote>
 
