--- a/html/19_paint.html
+++ b/html/19_paint.html
@@ -4,15 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Proyecto: Editor de Arte Pixelado :: Eloquent JavaScript</title>
   <link rel=stylesheet href="css/ejs.css"><script>
-      var page = {"type":"chapter","number":19}</script></head>
+      var page = {"type":"chapter","number":19,"load_files":["code/chapter/19_paint.js"]}</script></head>
 
 <article>
 <nav><a href="18_http.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="20_node.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Proyecto: Editor de Arte Pixelado</h1>
-
-<p><a class="p_ident" id="p-HQgYsEUS4P" href="#p-HQgYsEUS4P" tabindex="-1" role="presentation"></a>{{meta {load_files: [“code/chapter/19_paint.js”], zip: “html include=[“css/paint.css”]&quot;}}}</p>
 
 <blockquote>
 
