--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Eloquent JavaScript en Español</title>
   <meta name="description" content="Libro para Aprender JavaScript desde cero traducido al español y gratuito">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://eloquent-javascript-es.vercel.app/">
+  <meta property="og:title" content="Eloquent JavaScript en Español">
+  <meta property="og:description" content="Libro para Aprender JavaScript desde cero traducido al español y gratuito">
+  <meta property="og:image" content="https://eloquent-javascript-es.vercel.app/og.jpg">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://eloquent-javascript-es.vercel.app/">
+  <meta name="twitter:title" content="Eloquent JavaScript en Español">
+  <meta name="twitter:description" content="Libro para Aprender JavaScript desde cero traducido al español y gratuito">
+  <meta name="twitter:image" content="https://eloquent-javascript-es.vercel.app/og.jpg">
+
   <link rel=stylesheet href="css/ejs.css">
   <style>
     article {
