Generate new html

--- a/html/00_intro.html
+++ b/html/00_intro.html
@@ -14,29 +14,29 @@
 
 <blockquote>
 
-<p><a class="p_ident" id="p-d5O1EXJ3e7" href="#p-d5O1EXJ3e7" tabindex="-1" role="presentation"></a>Creemos que estamos creando el sistema para nuestros propios propósitos. Creemos que lo estamos haciendo a nuestra propia imagen... Pero la computadora en realidad no es como nosotros. Es una proyección de una parte muy delgada de nosotros mismos: esa parte dedicada a la lógica, el orden, la regla y la claridad.</p>
+<p><a class="p_ident" id="p-d5O1EXJ3e7" href="#p-d5O1EXJ3e7" tabindex="-1" role="presentation"></a>Creemos que estamos creando el sistema para nuestros propios propósitos. Creemos que lo estamos haciendo a nuestra propia imagen... Pero la computadora en realidad no es como nosotros. Es una proyección de una parte muy pequeña de nosotros mismos: esa parte dedicada a la lógica, el orden, la regla y la claridad.</p>
 
 <footer>Ellen Ullman, <cite>Cerca de la máquina: Tecnofilia y sus Descontentos</cite></footer>
 
 </blockquote><figure class="chapter framed"><img src="img/chapter_picture_00.jpg" alt="Ilustración de un destornillador junto a una placa de circuitos de aproximadamente el mismo tamaño"></figure>
 
-<p><a class="p_ident" id="p-92tUqeqK59" href="#p-92tUqeqK59" tabindex="-1" role="presentation"></a>Este es un libro sobre cómo instruir a computadoras. Las computadoras son tan comunes como los destornilladores hoy en día, pero son bastante más complejas, y hacer que hagan lo que quieres que hagan no siempre es fácil.</p>
+<p><a class="p_ident" id="p-92tUqeqK59" href="#p-92tUqeqK59" tabindex="-1" role="presentation"></a>Este es un libro sobre cómo instruir a computadoras. Las computadoras son tan comunes como los destornilladores hoy en día, pero son bastante más complejas, y hacer que hagan lo que quieres no siempre es fácil.</p>
 
 <p><a class="p_ident" id="p-Fy6EtbARYb" href="#p-Fy6EtbARYb" tabindex="-1" role="presentation"></a>Si la tarea que tienes para tu computadora es común, bien entendida, como mostrarte tu correo electrónico o actuar como una calculadora, puedes abrir la aplicación correspondiente y ponerte a trabajar. Pero para tareas únicas o abiertas, a menudo no hay una aplicación adecuada.</p>
 
-<p><a class="p_ident" id="p-SnAitKxiCq" href="#p-SnAitKxiCq" tabindex="-1" role="presentation"></a>Ahí es donde entra en juego la programming. <em>Programar</em> es el acto de construir un <em>programa</em>—un conjunto de instrucciones precisas que le dicen a una computadora qué hacer. Debido a que las computadoras son bestias tontas y pedantes, programar es fundamentalmente tedioso y frustrante.</p>
+<p><a class="p_ident" id="p-SnAitKxiCq" href="#p-SnAitKxiCq" tabindex="-1" role="presentation"></a>Ahí es donde entra en juego la programación. <em>Programar</em> es el acto de construir un <em>programa</em>—un conjunto de instrucciones precisas que le dicen a una computadora qué hacer. Debido a que las computadoras son bestias tontas y pedantes, programar es fundamentalmente tedioso y frustrante.</p>
 
-<p><a class="p_ident" id="p-viwm9ZeRTz" href="#p-viwm9ZeRTz" tabindex="-1" role="presentation"></a>Afortunadamente, si puedes superar ese hecho—e incluso disfrutar del rigor de pensar en términos que las máquinas tontas pueden manejar—programar puede ser gratificante. Te permite hacer cosas en segundos que tardarían <em>una eternidad</em> a mano. Es una forma de hacer que tu herramienta informática haga cosas que antes no podía hacer. Además, se convierte en un maravilloso juego de resolución de acertijos y pensamiento abstracto.</p>
+<p><a class="p_ident" id="p-Fw3zORuAFa" href="#p-Fw3zORuAFa" tabindex="-1" role="presentation"></a>Por suerte, si puedes superar ese hecho—e incluso disfrutar del rigor de pensar en términos que las máquinas tontas pueden manejar—programar puede ser gratificante. Te permite hacer cosas en segundos que te tomarían <em>una eternidad</em> a mano. Es una forma de hacer que tu herramienta informática haga cosas que antes no podía hacer. Además, se convierte en un maravilloso juego de resolución de acertijos y pensamiento abstracto.</p>
 
 <p><a class="p_ident" id="p-1oy7fNrtli" href="#p-1oy7fNrtli" tabindex="-1" role="presentation"></a>La mayoría de la programación se realiza con lenguajes de programación. Un <em>lenguaje de programación</em> es un lenguaje artificialmente construido utilizado para instruir a las computadoras. Es interesante que la forma más efectiva que hemos encontrado para comunicarnos con una computadora se base tanto en la forma en que nos comunicamos entre nosotros. Al igual que los idiomas humanos, los lenguajes informáticos permiten combinar palabras y frases de nuevas formas, lo que permite expresar conceptos cada vez más nuevos.</p>
 
-<p><a class="p_ident" id="p-Hxa6tGupTz" href="#p-Hxa6tGupTz" tabindex="-1" role="presentation"></a>En un momento dado, las interfaces basadas en lenguajes, como los mensajes de BASIC y DOS de los años 1980 y 1990, eran el principal método de interactuar con las computadoras. Para el uso informático rutinario, estas se han reemplazado en gran medida por interfaces visuales, que son más fáciles de aprender pero ofrecen menos libertad. Pero si sabes dónde buscar, los lenguajes todavía están ahí. Uno de ellos, <em>JavaScript</em>, está integrado en cada navegador web moderno—y por lo tanto está disponible en casi todos los dispositivos.</p>
+<p><a class="p_ident" id="p-Hxa6tGupTz" href="#p-Hxa6tGupTz" tabindex="-1" role="presentation"></a>En un momento dado, las interfaces basadas en lenguaje, como los <em>prompts</em> de BASIC y DOS de los años 1980 y 1990, eran el principal método de interactuar con las computadoras. Para el uso informático rutinario, estas se han reemplazado en gran medida por interfaces visuales, que son más fáciles de aprender pero ofrecen menos libertad. Pero si sabes dónde buscar, los lenguajes todavía están ahí. Uno de ellos, <em>JavaScript</em>, está integrado en cada navegador web moderno—y por lo tanto está disponible en casi todos los dispositivos.</p>
 
 <p><a class="p_ident" id="p-UM1T1aJ7ou" href="#p-UM1T1aJ7ou" tabindex="-1" role="presentation"></a>Este libro intentará que te familiarices lo suficiente con este lenguaje para hacer cosas útiles y entretenidas con él.</p>
 
 <h2><a class="h_ident" id="h-VQTIspPR7B" href="#h-VQTIspPR7B" tabindex="-1" role="presentation"></a>Sobre la programación</h2>
 
-<p><a class="p_ident" id="p-TFkPAVo4Zu" href="#p-TFkPAVo4Zu" tabindex="-1" role="presentation"></a>Además de explicar JavaScript, presentaré los principios básicos de la programación. La programación, resulta, es difícil. Las reglas fundamentales son simples y claras, pero los programas construidos sobre estas reglas tienden a volverse lo suficientemente complejos como para introducir sus propias reglas y complejidades. Estás construyendo tu propio laberinto, de alguna manera, y fácilmente puedes perderte en él.</p>
+<p><a class="p_ident" id="p-TFkPAVo4Zu" href="#p-TFkPAVo4Zu" tabindex="-1" role="presentation"></a>Además de explicar JavaScript, presentaré los principios básicos de la programación. Resulta que programar es difícil. Las reglas fundamentales son simples y claras, pero los programas construidos sobre estas reglas tienden a volverse lo suficientemente complejos como para introducir sus propias reglas y complejidades. Estás construyendo tu propio laberinto, de alguna manera, y fácilmente puedes perderte en él.</p>
 
 <p><a class="p_ident" id="p-BA4O1NBe2a" href="#p-BA4O1NBe2a" tabindex="-1" role="presentation"></a>Habrá momentos en los que leer este libro resulte terriblemente frustrante. Si eres nuevo en la programación, habrá mucho material nuevo que asimilar. Gran parte de este material luego se combinará de maneras que requieren que hagas conexiones adicionales.</p>
 
@@ -56,7 +56,7 @@
 
 <p><a class="p_ident" id="p-/9F8Q+2arA" href="#p-/9F8Q+2arA" tabindex="-1" role="presentation"></a>Algunos programadores creen que esta complejidad se gestiona mejor utilizando solo un conjunto pequeño de técnicas bien comprendidas en sus programas. Han compuesto reglas estrictas (“mejores prácticas”) que prescriben la forma que deberían tener los programas y se mantienen cuidadosamente dentro de su pequeña zona segura.</p>
 
-<p><a class="p_ident" id="p-B9jltzE+HA" href="#p-B9jltzE+HA" tabindex="-1" role="presentation"></a>Esto no solo es aburrido, sino que es ineficaz. A menudo, nuevos problemas requieren soluciones nuevas. El campo de la programación es joven y aún se está desarrollando rápidamente, y es lo suficientemente variado como para tener espacio para enfoques radicalmente diferentes. Hay muchos errores terribles que cometer en el diseño de programas, y deberías ir y cometerlos al menos una vez para entenderlos. Una noción de cómo es un buen programa se desarrolla con la práctica, no se aprende de una lista de reglas.</p>
+<p><a class="p_ident" id="p-B9jltzE+HA" href="#p-B9jltzE+HA" tabindex="-1" role="presentation"></a>Esto no solo es aburrido, es inefectivo. A menudo, nuevos problemas requieren soluciones nuevas. El campo de la programación es joven y aún se está desarrollando rápidamente, y es lo suficientemente variado como para tener espacio para enfoques radicalmente diferentes. Hay muchos errores terribles que cometer en el diseño de programas, y deberías ir y cometerlos al menos una vez para entenderlos. Una noción de cómo es un buen programa se desarrolla con la práctica, no se aprende de una lista de reglas.</p>
 
 <h2><a class="h_ident" id="h-Vf3QzWZiwT" href="#h-Vf3QzWZiwT" tabindex="-1" role="presentation"></a>Por qué importa el lenguaje</h2>
 
@@ -118,7 +118,7 @@
 
 </ol>
 
-<p><a class="p_ident" id="p-8IC8S1UXRk" href="#p-8IC8S1UXRk" tabindex="-1" role="presentation"></a>Aunque eso ya es más legible que la sopa de bits, sigue siendo bastante oscuro. Usar nombres en lugar de números para las instrucciones y las ubicaciones de memoria ayuda:</p>
+<p><a class="p_ident" id="p-8IC8S1UXRk" href="#p-8IC8S1UXRk" tabindex="-1" role="presentation"></a>Aunque eso ya es más legible que la sopa de bits, sigue siendo bastante confusa. Usar nombres en lugar de números para las instrucciones y las ubicaciones de memoria ayuda:</p>
 
 <pre class="snippet" data-language="null" ><a class="c_ident" id="c-cKkkJHQLZK" href="#c-cKkkJHQLZK" tabindex="-1" role="presentation"></a> Establecer “total” en 0.
  Establecer “count” en 1.
@@ -151,7 +151,7 @@ console.log(total);
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-zRop5p/qNC" href="#c-zRop5p/qNC" tabindex="-1" role="presentation"></a>console.log(suma(rango(<span class="tok-number">1</span>, <span class="tok-number">10</span>)));
 <span class="tok-comment">// → 55</span></pre>
 
-<p><a class="p_ident" id="p-driPI8xmvd" href="#p-driPI8xmvd" tabindex="-1" role="presentation"></a>La moraleja de esta historia es que el mismo programa puede expresarse de formas largas y cortas, ilegibles y legibles. La primera versión del programa era extremadamente oscura, mientras que esta última es casi en inglés: <code>registra</code> la <code>suma</code> del <code>rango</code> de números del 1 al 10. (Veremos en <a href="04_data.html">capítulos posteriores</a> cómo definir operaciones como <code>suma</code> y <code>rango</code>.)</p>
+<p><a class="p_ident" id="p-driPI8xmvd" href="#p-driPI8xmvd" tabindex="-1" role="presentation"></a>La moraleja de esta historia es que el mismo programa puede expresarse de formas largas y cortas, ilegibles y legibles. La primera versión del programa era extremadamente críptica, mientras que esta última es casi en inglés: registra (<code>log</code>) la <code>suma</code> del <code>rango</code> de números del 1 al 10. (Veremos en <a href="04_data.html">capítulos posteriores</a> cómo definir operaciones como <code>suma</code> y <code>rango</code>.)</p>
 
 <p><a class="p_ident" id="p-QB3ntHn9ea" href="#p-QB3ntHn9ea" tabindex="-1" role="presentation"></a>Un buen lenguaje de programación ayuda al programador al permitirle hablar sobre las acciones que la computadora debe realizar a un nivel más alto. Ayuda a omitir detalles, proporciona bloques de construcción convenientes (como <code>while</code> y <code>console.log</code>), te permite definir tus propios bloques de construcción (como <code>suma</code> y <code>rango</code>), y hace que esos bloques sean fáciles de componer.</p>
 
