fix chapter 02 html linked chapters

--- a/html/02_program_structure.html
+++ b/html/02_program_structure.html
@@ -24,7 +24,7 @@
 
 <h2><a class="h_ident" id="h-oqfl+ptPGG" href="#h-oqfl+ptPGG" tabindex="-1" role="presentation"></a>Expresiones y declaraciones</h2>
 
-<p><a class="p_ident" id="p-Te9W0P2dd7" href="#p-Te9W0P2dd7" tabindex="-1" role="presentation"></a>En <a href="01_values">Capítulo 1</a>, creamos valores y aplicamos operadores a ellos para obtener nuevos valores. Crear valores de esta manera es la sustancia principal de cualquier programa JavaScript. Pero esa sustancia debe enmarcarse en una estructura más grande para ser útil. Eso es lo que cubriremos en este capítulo.</p>
+<p><a class="p_ident" id="p-Te9W0P2dd7" href="#p-Te9W0P2dd7" tabindex="-1" role="presentation"></a>En <a href="01_values.html">Capítulo 1</a>, creamos valores y aplicamos operadores a ellos para obtener nuevos valores. Crear valores de esta manera es la sustancia principal de cualquier programa JavaScript. Pero esa sustancia debe enmarcarse en una estructura más grande para ser útil. Eso es lo que cubriremos en este capítulo.</p>
 
 <p><a class="p_ident" id="p-3x4YDXd58+" href="#p-3x4YDXd58+" tabindex="-1" role="presentation"></a>Un fragmento de código que produce un valor se llama una <em>expresión</em>. Cada valor que está escrito literalmente (como <code>22</code> o <code>&quot;psicoanálisis&quot;</code>) es una expresión. Una expresión entre paréntesis también es una expresión, al igual que un operador binario aplicado a dos expresiones o un operador unario aplicado a uno.</p>
 
